--- a/.github/workflows/github-actions-sonarcloud.yml
+++ b/.github/workflows/github-actions-sonarcloud.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy Container Image
+name: Code Quality & Security Analysis
 
 on:
   push:
@@ -7,13 +7,15 @@ on:
     branches: [main]
 
 jobs:
-  build-and-push:
-    name: Container Build & Registry Push
+  code-analysis:
+    name: SonarCloud Analysis
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Java Development Kit
         uses: actions/setup-java@v4
@@ -29,25 +31,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Build Application Artifact
-        run: mvn clean package -DskipTests
+      - name: Execute Unit Tests & Generate Coverage
+        run: mvn clean verify
 
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Authenticate Docker Registry
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build & Push Container Image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: |
-            juniorhr/banking-config-server:latest
-            juniorhr/banking-config-server:v${{ github.run_number }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+      - name: Run SonarCloud Analysis
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          mvn sonar:sonar \
+            -Dsonar.projectKey=mqcdev_banking-config-server \
+            -Dsonar.organization=your-organization \
+            -Dsonar.host.url=https://sonarcloud.io
