--- a/.github/workflows/github-actions-sonarcloud.yml
+++ b/.github/workflows/github-actions-sonarcloud.yml
@@ -38,8 +38,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          mvn sonar:sonar \
-            -Dsonar.projectKey=mqcdev_banking-config-server \
-            -Dsonar.organization=your-organization \
-            -Dsonar.host.url=https://sonarcloud.io
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=mqcdev_banking-config-server
+
