--- a/.github/workflows/github-actions-build.yml
+++ b/.github/workflows/github-actions-build.yml
@@ -51,6 +51,6 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/banking-config-server:latest
-            ${{ secrets.DOCKER_USERNAME }}/banking-config-server:v${{ github.run_number }}
+            ${{ secrets.DOCKER_USERNAME }}/banking-config-server:v${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
