--- a/.github/workflows/github-actions-build.yml
+++ b/.github/workflows/github-actions-build.yml
@@ -1,10 +1,8 @@
 name: Build & Deploy Container Image
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  repository_dispatch:
+    types: [docker-build]
 
 jobs:
   build-and-push:
